--- a/KafkaConsumer/src/main/resources/application.properties
+++ b/KafkaConsumer/src/main/resources/application.properties
@@ -4,3 +4,8 @@ kafka.group.id=invoice-processor
 kafka.topic=InvoiceTopic
 enable.auto.commit=false
 auto.offset.reset=earliest
+
+# Postgresql Configuration
+jdbc.url=jdbc:postgresql://localhost:5432/revenue
+jdbc.username=postgres
+jdbc.password=123456
