--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,14 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./script:/docker-entrypoint-initdb.d
 
+  metabase:
+    image: metabase/metabase:latest
+    ports:
+      - "3000:3000"
+    environment:
+      MB_DB_FILE: /metabase-data/metabase.db
+    volumes:
+      - ./metabase-data:/metabase-data
+
 volumes:
   pgdata:
